--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -1,6 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms" prism:ViewModelLocator.AutowireViewModel="True" x:Class="TapFitness.Views.MainPage" Title="MainPage">
-	<StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+<?xml version="1.0" encoding="utf-8"?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms" 
+    prism:ViewModelLocator.AutowireViewModel="True" 
+    x:Class="TapFitness.Views.MainPage"
+    Title="BGR.TapFitness"
+    Padding="0,20,0,0"
+    BackgroundColor = "Gray">
+	<StackLayout HorizontalOptions="Center" 
+                 VerticalOptions="Center">
+
+
+        
 		<Label Text="{Binding Title}" />
+
+
+        
 	</StackLayout>
 </ContentPage>
