--- a/App.xaml
+++ b/App.xaml
@@ -3,4 +3,17 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:prism="clr-namespace:Prism.Unity;assembly=Prism.Unity.Forms" 
     x:Class="TapFitness.App">
+
+    <Application.Resources>
+        <ResourceDictionary>
+            <Style
+                x:Key="DataEntryStyleOne"
+                TargetType="Label" >
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="FontSize" Value="25" />
+                <Setter Property="TextColor" Value="White"/>  
+            </Style>
+        </ResourceDictionary>
+    </Application.Resources>
+    
 </prism:PrismApplication>
