--- a/Views/DataSummaryPage.xaml
+++ b/Views/DataSummaryPage.xaml
@@ -6,7 +6,7 @@
     prism:ViewModelLocator.AutowireViewModel="True" 
     x:Class="TapFitness.Views.DataSummaryPage">
 
-    <StackLayout>
+    <StackLayout HorizontalOptions="Center" VerticalOptions="Fill" Padding="30">
 
         <Label 
             x:Name="SummaryPageLabel"
