api working just needs tweaking now

--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -83,7 +83,7 @@
                     />
 
                       <Entry
-                Placeholder="Placeholder"
+                Placeholder=""
                 Text="{Binding PlankTest}"
                 WidthRequest="200" />
 
@@ -93,7 +93,7 @@
                 
            <ListView
             x:Name="ExerciseListView"
-            ItemsSource="{Binding ExerciseCollection}">
+            ItemsSource="{Binding WeightResults}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell
@@ -104,7 +104,7 @@
                                 Orientation="Horizontal">
                                 <Label
                                     x:Name="Test0Label"
-                                    Text="{Binding Result.Weight, StringFormat='W: {0}'}"
+                                    Text="{Binding Weight, StringFormat='W: {0}'}"
                                     VerticalOptions="Center"
                                     Margin="3" />
                             </StackLayout>
